[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ab-rotation"
path = "src/main.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "=0.8.3", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.3" }
risc0-zkvm = { version = "1.1", default-features = false, features = ["std"] }

derive_more = "1.0.0"
serde = "1.0"
serde-big-array = "0.5.1"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-bn254 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["sponge", "snark", "commitment"] }
ark-crypto-primitives-macros = "0.5.0"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
bytemuck = "1.19.0"

[features]
with_bls_aggregate = []

[profile.release]
lto = "thin"
